--- a/index.html
+++ b/index.html
@@ -140,24 +140,26 @@
               <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Educação
             </h2>
             <div class="w3-container">
+              <h5 class="w3-opacity"><b>WEb Full Stack - Digital House</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Junho 2022 - Abril 2023</h6>
+              <p>Desenvolvedor Web Full Stack
+              Competências:
+              Express.js · CSS · HTML5 · HTML · Workbench · JavaScript · React.js ·
+              Desenvolvimento de API · Node.js · Postman API · Banco de dados</p>
+            </div>
+
+            <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2020 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
+                <li><a href="https://www.dio.me/certificate/126FC139" target="_blank">Lógica de Programação Essencial</a></li>
               </ul>
               <hr>
-            </div>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
             </div>
           </div>
 
