--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="https://www.dio.me/certificate/126FC139" target="_blank">Lógica de Programação Essencial</a></li>
+                <li><a href="https://www.dio.me/certificate/126FC139" target="_blank">Curso: Lógica de Programação Essencial</a></li>
+                <li><a href="https://www.dio.me/certificate/DD66E623" target="_blank">Curso: Dominando o Protocolo HTTP e Integrando</a></li>
               </ul>
               <hr>
             </div>
@@ -170,15 +171,17 @@
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="LINK_GITHUB" target="_blank">USUARIO_GITHUB/REPO</a>
+                <a href="https://github.com/GrupoUmDH/grupo1" target="_blank">/lucasafonsobastos/LUMIERE</a>
               </h6>
-              <p>TODO</p>
+              <p>LUMIERE - 
+              Projeto focado no desenvolvimento web, conclui o curso de Programação Web Full Stack pela Digital House, focado na transição de carreira. Trabalhando em equipe para o desenvolvimento de um sistema e-commerce.
+              </p>
               <hr>
             </div>
             <div class="w3-container">
               <h6 class="w3-text-teal">
-                <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
-                <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/REPO</a>
+                <i class="fa fa-github fa-fw w3-margin-right"></i>
+                <a href="https://github.com/lucasafonsobastos/js-developer-pokedex" target="_blank">/lucasafonsobastos/js-developer-pokedex</a>
               </h6>
               <p>TODO</p>
             </div>
@@ -195,11 +198,8 @@
   
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="LINK_GITHUB" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="LINK_LINKEDIN" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-      <a href="LINK_FACEBOOK" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-      <a href="LINK_INSTAGRAM" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-      <a href="LINK_TWITTER" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+      <a href="https://github.com/lucasafonsobastos" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/lucas-afonso-bastos-6180b874/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
