--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="https://github.com/lucasafonsobastos/js-developer-pokedex" target="_blank">/lucasafonsobastos/js-developer-pokedex</a>
               </h6>
-              <p>TODO</p>
+              <p>Projeto de consumo de Api utilizando JavaScript</p>
             </div>
           </div>
   
